# agentic-python-template

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  pyproject.toml
