[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-python-project"
version = "0.1.0"
description = "A default setup repository for coding Python with agents."
requires-python = ">=3.13"
dependencies = [
    "basedpyright>=1.34.0",
    "mypy>=1.10",
    "ruff>=0.14.5",
]


[tool.mypy]
plugins = ['pydantic.mypy']
strict = true
namespace_packages = true
explicit_package_bases = true

[project.scripts]
command_name = "src.cli:cli"

[tool.setuptools.packages.find]
include = ["src"]

[tool.basedpyright]
include = ["src"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "recommended"
reportUnusedCallResult = false

[tool.ruff]
line-length = 120
indent-width = 4
lint.extend-select = ["I"]
src = ["src"]
#exclude = ["repos"]
